@@ -1,3 +1,8 @@
+2002-03-19  Manish Singh  <yosh@gimp.org>
+
+	* install-check.c: So my assumption was wrong. Add cases for *.idl
+	and orbit-idl-2
+
 2002-03-18  James Henstridge  <james@daa.com.au>
 
 	* moduleinfo.py: apply Greg Schafer's patch for the gnome1
